# university-works

hse-bigdata-project-work/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
hse-bigdata-project-work/iot_generator/: generator.py
hse-bigdata-project-work/scripts/: consume_output.py  download_jars.sh
hse-bigdata-project-work/sql/: ddl.sql  dml.sql
hse-bigdata-project-work/src/: config.py  flink_job.py
hse-ii-assistant-project/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
hse-ii-assistant-project/app/: streamlit_app.py
hse-ii-assistant-project/data/: client_scenarios.json  deposits.csv  golden_set.json
hse-ii-assistant-project/docs/: 00_overview.md  01_business_value.md  02_ml_lifecycle.md  03_monitoring.md  04_validation_model_risk.md  05_degradation.md  06_decommission.md  repo_guide.md
hse-ii-assistant-project/presentation/: deck.html  demo_manual.md  demo_runbook.md  outline.md  print.html  roles.md  script.md  study_guide.md
hse-ii-assistant-project/scripts/: catalog_builder.py  demo_traffic.py  generate_dataset.py  run_eval.py  simulate_drift.py
hse-ii-assistant-project/src/: __init__.py  assistant.py  config.py  data_access.py
hse-ii-assistant-project/src/core/: __init__.py  effective_rate.py  filtering.py  guards.py  models.py  ranking.py  (+1 more)
hse-ii-assistant-project/tests/: conftest.py  test_data_consistency.py  test_effective_rate.py  test_filtering_ranking.py  test_groundedness.py  test_guards_and_refusals.py  test_validation_and_monitoring.py
(+91 files in other folders)
